# virgil-purekit-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
ext/: CMakeLists.txt
ext/googletest/: CMakeLists.txt  CMakeLists.txt.in
ext/virgil-crypto/: CMakeLists.txt  CMakeLists.txt.in
protobuf/: CMakeLists.txt
protobuf/proto_build/: purekit.pb.cc  purekit.pb.h  purekitV3_client.pb.cc  purekitV3_client.pb.h  purekitV3_crypto.pb.cc  purekitV3_crypto.pb.h  purekitV3_grant.pb.cc  purekitV3_grant.pb.h  purekitV3_storage.pb.cc  purekitV3_storage.pb.h
pure/: CMakeLists.txt
pure/HttpClientProtobuf/: CMakeLists.txt
pure/HttpClientProtobuf/include/: HttpClientProtobuf.h
pure/HttpClientProtobuf/src/: HttpClientProtobuf.cpp
pure/HttpPheClient/: CMakeLists.txt
pure/HttpPheClient/include/: HttpPheClient.h
pure/HttpPheClient/src/: HttpPheClient.cpp
pure/PureCrypto/include/: Common.h  KeyPair.h  KeyProvider.h  PrivateKey.h  PrivateKeyCWrapper.h  PublicKey.h  PureCrypto.h  Utils.h  VirgilPublicKey.h
pure/PureCrypto/src/: KeyPair.cpp  KeyProvider.cpp  PrivateKey.cpp  PrivateKeyCWrapper.cpp  PublicKey.cpp  PureCrypto.cpp  Utils.cpp
pure/include/: Pure.h
pure/include/virgil/purekit/: AuthResult.h  HttpKmsClient.h  KmsManager.h  NonRotatableSecrets.h  NonRotatableSecretsGenerator.h  NonrotatableSecrets.h  PheManager.h  Pure.h  PureContext.h  PureStorage.h  UoKmsClient.h
pure/include/virgil/purekit/HttpPheClient/: HttpPheClient.h
pure/include/virgil/purekit/PureCrypto/: PureCrypto.h  PureCryptoData.h
pure/include/virgil/purekit/VirgilCrypto/: Common.h  KeyPair.h  KeyPairType.h  KeyProvider.h  PheCipher.h  PheClient.h  PheClientEnrollAccountResult.h  Utils.h  VirgilBase64.h  VirgilCrypto.h  VirgilKeyPair.h  VirgilPrivateKey.h  VirgilPublicKey.h
pure/include/virgil/purekit/client/: HttpKmsClient.h  HttpPheClient.h  HttpPureClient.h
pure/include/virgil/purekit/exceptions/: NotImplementedException.h
pure/include/virgil/purekit/model/: CellKey.h  GrantKey.h  PureGrant.h  Role.h  RoleAssignment.h  UserRecord.h
pure/include/virgil/purekit/storage/: PureStorage.h  RamPureStorage.h
pure/src/: AuthResult.cpp  KmsManager.cpp  NonRotatableSecrets.cpp  NonRotatableSecretsGenerator.cpp  PheManager.cpp  Pure.cpp  PureContext.cpp
pure/src/HttpPheClient/: HttpPheClient.cpp
pure/src/PureCrypto/: PureCrypto.cpp  PureCryptoData.cpp  Utils.cpp  VirgilCrypto.cpp  VirgilPublicKey.cpp
pure/src/VirgilCrypto/: KeyPair.cpp  KeyProvider.cpp  Utils.cpp  VirgilBase64.cpp  VirgilCrypto.cpp  VirgilKeyPair.cpp  VirgilPrivateKey.cpp  VirgilPublicKey.cpp
pure/src/client/: HttpKmsClient.cpp  HttpPheClient.cpp  HttpPureClient.cpp
pure/src/model/: CellKey.cpp  GrantKey.cpp  PureGrant.cpp  Role.cpp  RoleAssignment.cpp  UserRecord.cpp
tests/: CMakeLists.txt
tests/client/: CMakeLists.txt  test_client.cpp  test_dummy.cpp
tests/googletest/: CMakeLists.txt
